Alterações nos cards fundadores

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <nav class="CardFundador">
                     <div class="efeitoCard0 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/founder2.png" alt="" srcset="">
+                        <img src="assets/img/fundador4.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Calebe "CL" Lukombo
@@ -331,14 +331,14 @@
                     <nav class="statusFundador">
                         CEO e fundador
                     </nav>
-                    <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus similique ut illum obcaecati saepe fugit pariatur dolores, autem quae suscipit eos provident?</nav>
+                    <nav class="sobreFundador">Criamos a 777PY porque acreditamos que ciência também é coragem. 777 é um movimento, o local onde a estatística encara a ousadia e a pura anti-estatística.</nav>
                     <div class="efeitoCard1 efeitoCard"></div>
                 </nav>
 
                 <nav class="CardFundador">
                     <div class="efeitoCard2 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/founder1.png" alt="" srcset="">
+                        <img src="assets/img/fundador1.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Maria Lumengo
@@ -346,14 +346,14 @@
                     <nav class="statusFundador">
                         Co-fundadora
                     </nav>
-                    <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus similique ut illum obcaecati saepe fugit pariatur dolores, autem quae suscipit eos provident?</nav>
+                    <nav class="sobreFundador">Onde dizem que é sorte, não há somente a Lei dos Grandes Números, há também, inteligência feminina. Os dados não mentem, e nem as mulheres que as dominam.</nav>
                     <div class="efeitoCard3 efeitoCard"></div>
                 </nav>
 
                 <nav class="CardFundador">
                     <div class="efeitoCard4 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/founder.png" alt="" srcset="">
+                        <img src="assets/img/fundador3.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Adilson "AL" Lukombo
@@ -361,29 +361,29 @@
                     <nav class="statusFundador">
                         Diretor e fundador
                     </nav>
-                    <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus similique ut illum obcaecati saepe fugit pariatur dolores, autem quae suscipit eos provident?</nav>
+                    <nav class="sobreFundador">O impossível só é impossível até alguém fazer. Há muita coisa para se aprender, muita coisa para se estudar e perder tempo jamais será opção.</nav>
                     <div class="efeitoCard5 efeitoCard"></div>
                 </nav>
 
                 <nav class="CardFundador">
                     <div class="efeitoCard6 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/founder2.png" alt="" srcset="">
+                        <img src="assets/img/fundador3.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Nkosi "Beni" Simão
                     </nav>
                     <nav class="statusFundador">
-                        CEO e co-fundadora
+                        CEO e co-fundador
                     </nav>
-                    <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus similique ut illum obcaecati saepe fugit pariatur dolores, autem quae suscipit eos provident?</nav>
+                    <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus.</nav>
                     <div class="efeitoCard7 efeitoCard"></div>
                 </nav>
 
                 <nav class="CardFundador">
                     <div class="efeitoCard8 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/founder.png" alt="" srcset="">
+                        <img src="assets/img/fundador3.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Aguinaldo "AG" Jacob
@@ -391,14 +391,14 @@
                     <nav class="statusFundador">
                         CEO e fundador
                     </nav>
-                    <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus similique ut illum obcaecati saepe fugit pariatur dolores, autem quae suscipit eos provident?</nav>
+                    <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus</nav>
                     <div class="efeitoCard9 efeitoCard"></div>
                 </nav>
 
                 <nav class="CardFundador">
                     <div class="efeitoCard10 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/founder1.png" alt="" srcset="">
+                        <img src="assets/img/fundador2.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Nacho
@@ -406,14 +406,14 @@
                     <nav class="statusFundador">
                         CEO e fundador
                     </nav>
-                    <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus similique ut illum obcaecati saepe fugit pariatur dolores, autem quae suscipit eos provident?</nav>
+                    <nav class="sobreFundador">Fundamos o 777PY porque não queríamos só jogar — queríamos mudar o jogo. E se você está aqui, é porque também carrega essa faísca de revolução.</nav>
                     <div class="efeitoCard11 efeitoCard"></div>
                 </nav>
 
                 <nav class="CardFundador">
                     <div class="efeitoCard12 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/founder.png" alt="" srcset="">
+                        <img src="assets/img/fundador3.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Alexandre Afonso
@@ -421,14 +421,14 @@
                     <nav class="statusFundador">
                         CEO e Director de Marketing
                     </nav>
-                    <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus similique ut illum obcaecati saepe fugit pariatur dolores, autem quae suscipit eos provident?</nav>
+                    <nav class="sobreFundador">Somos jovens negros, africanos, sonhadores e criadores de um movimento ousada e evolutivo. Somos angolanos, somos futuros, somos ciência!</nav>
                     <div class="efeitoCard13 efeitoCard"></div>
                 </nav>
 
                 <nav class="CardFundador">
                     <div class="efeitoCard14 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/founder1.png" alt="" srcset="">
+                        <img src="assets/img/fundador.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Nalita Kiambi
@@ -436,7 +436,7 @@
                     <nav class="statusFundador">
                         Secretária e co-fundadora
                     </nav>
-                    <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus similique ut illum obcaecati saepe fugit pariatur dolores, autem quae suscipit eos provident?</nav>
+                    <nav class="sobreFundador">Acredito que com o 777 e com esse movimento podemos despertar mais mulheres angolanas a amarem números, códigos e evolução.</nav>
                     <div class="efeitoCard15 efeitoCard"></div>
                 </nav>
 
