Novas cenas no form e responsividade

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <nav>
             <a href="index.html"><h1>777<sup>PY</sup></h1></a>
         </nav>
-        <nav>
-            <nav>
+        <nav class="navMobilePorra">
+            <nav class="navLinksMenu">
                 <a href="#" class="linksMenu">Página Inicial</a>
                 <a href="#" class="linksMenu">Como funciona?</a>
                 <a href="#" class="linksMenu">Posso participar?</a>
@@ -41,6 +41,11 @@
                 <a href="#"><button class="btn btn0">Contactar</button></a>
                 <a href="#" id="MostrarFomEnviar" target="_top"><button class="btn">Enviar Palpite <i class="fa-solid fa-paper-plane"></i></button></a>
             </nav>
+        </nav>
+        <nav class="menuHamburguer">
+            <div class="linha"></div>
+            <div class="linha"></div>
+            <div class="linha"></div>
         </nav>
     </header>
 
@@ -69,7 +74,7 @@
                         <nav class="contentInputForm">
                             <nav class="navInputFormText">
                                 <input type="text" placeholder=" " id="apelido">
-                                <label for="apelido">Apelido</label>
+                                <label for="apelido">Apelido / Nome Fictício</label>
                             </nav>
                             <h5>Será usado para a sua identificação anónima</h5>
                         </nav>
@@ -108,7 +113,7 @@
                             <h5 style="margin-block-start: 1rem;">Usado para entender as suas preferências de apostas</h5>
                         </nav>
 
-                        <div style="display: flex; align-items: center; justify-content: space-between; gap: 1rem;">
+                        <div class="DivInputContePalpite">
                         <nav class="contentInputForm">
                             <h4>Carregue aqui o palpite...</h4>
                             <nav class="navContentFile">
@@ -150,7 +155,7 @@
 
                         <nav>
                             <nav class="navBtns navBtnsForm">
-                                <a href="#"><button class="btn btn0" id="cancelarForm">Cancelar</button></a>
+                                <a href="#"><button class="btn btn0" type="reset" id="cancelarForm">Cancelar</button></a>
                                 <a href="#"><button class="btn">Palpitar Agora <i class="fa-solid fa-paper-plane"></i></button></a>
                             </nav>
                         </nav>
@@ -163,7 +168,7 @@
         <section class="secao1">
             <nav class="slide-left">
                 <h1 id="titleHero">Prevemos o <span class="textoEfeito">futuro!</span> O seu <span class="textoEfeito">palpite,</span> a nossa <span class="textoEfeito">ciência.</span></h1>
-                <p id="textoHero">A 777PY está dando uma chance real: transformar os teus palpites em reconhecimento, oportunidade e recompensa de verdade. Aqui, a tua intuição, estratégia e palpite viram ciência. Cada palpite teu nos ajuda a criar previsões mais confiáveis e estatisticamente certeiras. Enquanto muitos apostam no escuro e perdem dinheiro, você usa 777 com estratégia, foco e coragem. E em apenas 10 dias podes sair com 2.5 milhões de kwanzas. A pergunta é simples: Vais continuar a sonhar… ou vais fazer acontecer com a 777PY?</p>
+                <p id="textoHero">A <span style="font-weight: 500; font-family: 'Libre Franklin';">777<sup>PY</sup></span> está dando uma chance real e única: transformar os teus palpites em reconhecimento, oportunidade e recompensa de verdade. Aqui, a tua intuição, estratégia e palpite viram ciência. Enquanto muitos apostam no escuro e perdem dinheiro, você usa <span style="font-weight: 500;">777</span> com estratégia, foco e coragem. E em apenas 10 dias ganharás 2.500.000 de kwanzas. A pergunta é simples: <span class="textoGradiente" style="font-weight: bold;">Vais continuar a sonhar… ou vais fazer acontecer com a 777PY?</span></p>
                 <nav class="navBtns">
                     <a href="#"><button class="btn btn0">Saiba Mais</button></a>
                     <a href=""><button class="btn">Assistir Vídeo Explicativo</button></a>
@@ -177,11 +182,11 @@
         <section class="secao secao2">
             <div class="divTopoSecao">
                 <nav>
-                    <h2 class="tituloSecao">Descobre<span class="textoSemEfeito"> Como Funciona.</span></h2>
+                    <h2 class="tituloSecao">Saiba<span class="textoSemEfeito"> Como Funciona.</span></h2>
                     <p class="textoSecao">Estamos à tua espera — e acreditamos que o teu palpite vale ouro. Escolhe a modalidade que dominas, como futebol, boxe ou basquetebol, e monta os teus palpites certeiros com total liberdade. Podes escolher qualquer tipo de código: total de golos/pontos, vencedor direto, handicaps, parte mais produtiva ou outros mercados à tua escolha. Decide se queres apostar num único jogo, numa múltipla ou até numa construção mais elaborada. Só precisas garantir que o total de pontos por palpite esteja entre 5 e 10 pontos. Depois disso, é simples: tira um screenshot ou envia o ID do teu palpite para nós através do WhatsApp, e-mail ou Facebook. Continua a participar durante 10 dias consecutivos, e se acertares todos os palpites... ganhas 2.500.000 Kz na hora!</p>
                 </nav>
                 <nav>
-                    <p class="textoSecaoLado">Acreditamos em você e na tua estratégia que o ajudará a <span class="textoColorido">ganhar milhões de kwanzas</span>. Junte-se a <span class="textoColorido">777PY</span> e mostre o poder da tua <span class="textoColorido">intuição, raciocínio e palpites.</span> Transforme em conquistas <span class="textoColorido">reais e lucrativas.</span></p>
+                    <p class="textoSecaoLado">Acreditamos em você e na tua estratégia que o ajudará a <span class="textoColorido">ganhar milhões de kwanzas</span> em 10 dias. Junte-se a <span class="textoColorido">777PY</span> e mostre o poder da tua <span class="textoColorido">intuição, raciocínio e palpites.</span> Transforme em conquistas <span class="textoColorido">reais e lucrativas.</span></p>
                 </nav>
             </div>
             <div class="conteudoSecao">
@@ -297,13 +302,11 @@
                 <nav>
                     <p class="paragrafosSecao3">Acreditamos que existem milhares de apostadores com potencial escondido - pessoas que usam lógica, raciocínio e uma leitura de incrível de jogos, mas que nunca foram reconhecidas por isso. A 777 chegou para mudar esse jogo. Aqui, seus palpites são tratados com resultados que merecem.</p>
 
-                    <p class="paragrafosSecao3">Nosso desafio de 10 dias é apenas o começo. É a oportunidade mostrar que você entende do assunto, que pensa diferente e pode provar isso com resultados. E mais: uma chance de ganhar 2.500.000 Kzs em 10 dias, reconhecimento e até uma vaga na nossa startup.</p>
-
                     <p class="paragrafosSecao3">777PY é muito mais do que um projeto - é um movimento. É um movimento onde um o apostador deixa de ser visto como um mero jogador de sorte, e passa a ser reconhecido como estrategista e jogador analista. Lembre-se, o teu palpite vale ouro!</p>
 
-                    <p class="paragrafosSecao3" style="display: none;">O número 777 na tradição cristã representa perfeição, totalidade e conclusão (comos os 7 dias da criação). Repetido três vezes, o 777 é visto como a manifestação mais pura da perfeição divina. Na matemática, é um número palíndromo, ou seja, lido da mesma forma de trás para frente. Na base binária, é representada como 1100001001, em algarismos romanos como DCCLXXVII. Se quiseres saber mais, junte-se a nossa startup... hahaha</p>
+                    <p class="paragrafosSecao3">O número 777 na tradição cristã representa perfeição, totalidade e conclusão - como os 7 dias da criação. Repetido três vezes, é visto como a manifestação mais pura da perfeição divina. Na matemática, é um número palíndromo, ou seja, lido da mesma forma de trás para frente. Representado em binário como 1100001001 e, em algarismos romanos, como DCCLXXVII.</p>
 
-                    <p class="paragrafosSecao3">Se chegaste até a 777PY, é porque dentro de ti existe um sonhador, um pensador, um estratega, um visionário. Se estás aqui, és alguém que vê o jogo diferente, que sente o momento, analisa, conecta os pontos e transforma palpite em 2.5 milhões em 10 dias. Acreditamos no teu talento, na tua leitura de jogo, na tua coragem e na tua vontade de ser milionário em 10 dias. Entra nessa desafio com confiança, mostre o teu raciocínio. Se vence agindo, o teu palpite é o teu maior trunfo e faz ela valer 2.500.000 Kzs.</p>
+                    <p class="paragrafosSecao3">Se chegaste até a 777, é porque dentro de ti existe um sonhador, um pensador, um visionário. Se estás aqui, és alguém que vê o jogo diferente, que sente o momento, analisa, conecta os pontos e transforma palpite em 2.5 milhões em 10 dias. Acreditamos no teu talento, na tua leitura de jogo, na tua coragem e na tua vontade de ser milionário em 10 dias. Entra nessa desafio com confiança, mostre o teu raciocínio.</p>
                 </nav>
             </div>
         </section>
@@ -331,7 +334,7 @@
                     <nav class="statusFundador">
                         CEO e fundador
                     </nav>
-                    <nav class="sobreFundador">Criamos a 777PY porque acreditamos que ciência também é coragem. 777 é um movimento, o local onde a estatística encara a ousadia e a pura anti-estatística.</nav>
+                    <nav class="sobreFundador">Criamos a 777PY porque acreditamos que ciência também é coragem. 777 é um movimento, o ponto onde a estatística encara a ousadia e a pura anti-estatística.</nav>
                     <div class="efeitoCard1 efeitoCard"></div>
                 </nav>
 
@@ -344,9 +347,9 @@
                         Maria Lumengo
                     </nav>
                     <nav class="statusFundador">
-                        Co-fundadora
+                        Co-CEO e fundadora
                     </nav>
-                    <nav class="sobreFundador">Onde dizem que é sorte, não há somente a Lei dos Grandes Números, há também, inteligência feminina. Os dados não mentem, e nem as mulheres que as dominam.</nav>
+                    <nav class="sobreFundador">Onde dizem que é sorte, há mais que a Lei dos Grandes Números — há inteligência feminina. Os dados não mentem, e nem as mulheres que os dominam.</nav>
                     <div class="efeitoCard3 efeitoCard"></div>
                 </nav>
 
@@ -361,7 +364,7 @@
                     <nav class="statusFundador">
                         Diretor e fundador
                     </nav>
-                    <nav class="sobreFundador">O impossível só é impossível até alguém fazer. Há muita coisa para se aprender, muita coisa para se estudar e perder tempo jamais será opção.</nav>
+                    <nav class="sobreFundador">O impossível só é impossível até alguém fazê-lo. Há muita coisa para se aprender, muita coisa para se estudar — perder tempo jamais será opção.</nav>
                     <div class="efeitoCard5 efeitoCard"></div>
                 </nav>
 
@@ -371,7 +374,7 @@
                         <img src="assets/img/fundador3.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
-                        Nkosi "Beni" Simão
+                        Nkosi Simão
                     </nav>
                     <nav class="statusFundador">
                         CEO e co-fundador
@@ -406,7 +409,7 @@
                     <nav class="statusFundador">
                         CEO e fundador
                     </nav>
-                    <nav class="sobreFundador">Fundamos o 777PY porque não queríamos só jogar — queríamos mudar o jogo. E se você está aqui, é porque também carrega essa faísca de revolução.</nav>
+                    <nav class="sobreFundador">Fundamos o 777PY porque não queríamos só jogar — queríamos mudar o jogo. E se você está aqui, é porque também carrega essa vontade de revolução: nas apostas e na própia vida.</nav>
                     <div class="efeitoCard11 efeitoCard"></div>
                 </nav>
 
@@ -421,7 +424,7 @@
                     <nav class="statusFundador">
                         CEO e Director de Marketing
                     </nav>
-                    <nav class="sobreFundador">Somos jovens negros, africanos, sonhadores e criadores de um movimento ousada e evolutivo. Somos angolanos, somos futuros, somos ciência!</nav>
+                    <nav class="sobreFundador">Somos jovens negros, africanos, sonhadores e criadores de um movimento ousado e transformador. Somos angolanos, somos o futuro, somos ciência!</nav>
                     <div class="efeitoCard13 efeitoCard"></div>
                 </nav>
 
@@ -436,7 +439,7 @@
                     <nav class="statusFundador">
                         Secretária e co-fundadora
                     </nav>
-                    <nav class="sobreFundador">Acredito que com o 777 e com esse movimento podemos despertar mais mulheres angolanas a amarem números, códigos e evolução.</nav>
+                    <nav class="sobreFundador">Acredito que com o 777 e esse movimento podemos inspirar mais mulheres angolanas a se apaixonarem por números, códigos e pelo poder da ciência.</nav>
                     <div class="efeitoCard15 efeitoCard"></div>
                 </nav>
 
@@ -545,7 +548,7 @@
         </section>
 
         <section class="secao secao7">
-            <h4 class="textoSecao7">Se ainda tiver <span class="textoGradiente">dúvidas</span> ou precisar de mais <span class="textoGradiente">esclarecimentos</span>, você pode assistir o <span class="textoGradiente">vídeo explicativo</span> <span class="textoGradiente">criado </span>especialmente <span class="textoGradiente">para você</span>.</h4>
+            <h4 class="textoSecao7">Se ainda tiver <span class="textoGradiente">dúvidas</span> ou precisar de mais <span class="textoGradiente">esclarecimentos</span>, assista o <span class="textoGradiente">vídeo explicativo</span> <span class="textoGradiente">criado </span>especialmente <span class="textoGradiente">para você</span>.</h4>
             <nav class="navVideoExplicativo">
                 <video src="assets/video/video777py.mp4" class="videoExplicativo" controls></video>
             </nav>
